--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <Html> 
 <Head>
-    apex legends
-    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Apex Legends Legend Information</title>
 </Head>
 <body>
-Apexlegends
+
 
 </body>
 </Html>
